--- a/styles/icon.module.css
+++ b/styles/icon.module.css
@@ -100,7 +100,7 @@
     color: #ffffff;
   }
   .iconReact {
-    background: #282c34;
+    background: #000;
     color: #61dafb;
   }
   .iconPython {
@@ -124,8 +124,8 @@
     color: #ffffff;
   }
   .iconBlog {
-    background: #1f253d;
-    color: #edf0fc;
+    background: #048f0e;
+    color: #ffffff;
   }
   .iconNode {
     background: #333333;
