--- a/styles/global.css
+++ b/styles/global.css
@@ -1,75 +1,31 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  font-family: 'Hiragino Sans GB', Helvetica, Arial, sans-serif;
+}
+
+.react-toggle-track {
+  background-color: rgb(30, 41, 59) !important;
+}
+.react-toggle--checked .react-toggle-track {
+  background-color: white !important;
+}
+.react-toggle--checked .react-toggle-thumb {
+  border-color: rgb(30, 41, 59) !important;
+  background-color: rgb(30, 41, 59) !important;
+}
+
 :root {
   --clr-bg: #09091b;
   --clr-link: #94b9f4;
+  /* --clr-code-bg: #20273c; */
   --clr-code-bg: #20273c;
   --clr-code-txt: #d7def9;
-  --clr-txt-050:hsla(0,0%,100%,0.64);
-  --clr-txt-100: hsla(0,0%,100%,0.76);
-  --clr-txt-150: hsla(0,0%,100%,0.87);
-  --clr-txt-200:hsla(0,0%,100%,0.95);
+  --clr-txt-050: hsla(0, 0%, 100%, 0.64);
+  --clr-txt-100: hsla(0, 0%, 100%, 0.76);
+  --clr-txt-150: hsla(0, 0%, 100%, 0.87);
+  --clr-txt-200: hsla(0, 0%, 100%, 0.95);
   --br-lg: .5rem;
-}
-
-html, * {
-  line-height: 1.5;
-}
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-size: 16px;
-  font-family: Inter,Helvetica,sans-serif;
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
-  color: var(--clr-txt-100);
-  background-color: var(--clr-bg);
-}
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-a:link, a:visited {
-  color: var(--clr-link);
 }
